@@ -1,3 +1,8 @@
+2012-02-17  Corinna Vinschen  <corinna@vinschen.de>
+
+	* mount.cc (get_disk_type): Drop unneeded toupper call.  Convert case
+	constants to wide chars.
+
 2012-02-16  Corinna Vinschen  <corinna@vinschen.de>
 
 	* autoload.cc (NetUseGetInfo): Define.
